--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -3,8 +3,8 @@ package:
   version: "0.3.0"
 
 source:
-  git_rev: v0.3.0
-  git_url: https://github.com/openSourcerer9000/funkshuns
+  # Relative path to the parent directory.
+  path: ..
 
 requirements:
   host:
