--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -11,7 +11,7 @@ requirements:
     - python
     - setuptools
   build:
-    - python
+    - python {{ python }}
   run:
     - python
     - pandas
