--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+tests/mockdata/ignore/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -102,5 +104,4 @@ ENV/
 .mypy_cache/
 
 # IDE settings
-.vscode/
 .idea/
